--- a/Diplomski.Infrastructure/appsettings.Development.json
+++ b/Diplomski.Infrastructure/appsettings.Development.json
@@ -15,5 +15,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "elasticsearch": {
+    "url": "http://localhost:9200/"
+  }
 }
