--- a/Diplomski.Api/appsettings.json
+++ b/Diplomski.Api/appsettings.json
@@ -15,5 +15,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DiplomskiDB;Trusted_Connection=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "elasticsearch": {
+    "url": "http://localhost:9200/"
+  }
 }
