Add host config to backround service

--- a/Diplomski.Api/appsettings.json
+++ b/Diplomski.Api/appsettings.json
@@ -17,6 +17,8 @@
   },
   "AllowedHosts": "*",
   "elasticsearch": {
-    "url": "http://localhost:9200/"
+    "url": "http://localhost:9200/",
+    "username": "elastic",
+    "password": "elasticelfak14"
   }
 }
