Edit Database ConnectionString Add InitialMigration

--- a/Diplomski.Api/appsettings.json
+++ b/Diplomski.Api/appsettings.json
@@ -13,7 +13,7 @@
     "DurationInMinutes": 10
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DiplomskiDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FleetManagerDiplomskiDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*",
   "elasticsearch": {
