--- a/Diplomski.Infrastructure/appsettings.json
+++ b/Diplomski.Infrastructure/appsettings.json
@@ -6,7 +6,7 @@
     "DurationInMinutes": 10
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DiplomskiDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FleetManagerDiplomskiDB;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
