Refactorize Code, Move Dtos to Diplomski.Models project

--- a/Diplomski.Infrastructure/Diplomski.Infrastructure.csproj
+++ b/Diplomski.Infrastructure/Diplomski.Infrastructure.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Diplomski.Application\Diplomski.Application.csproj" />
+    <ProjectReference Include="..\Diplomski.Core\Diplomski.Models.csproj" />
   </ItemGroup>
 
 </Project>
