--- a/Diplomski.TrackSender/Diplomski.TrackSender.csproj
+++ b/Diplomski.TrackSender/Diplomski.TrackSender.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Diplomski.Application\Diplomski.Application.csproj" />
+    <ProjectReference Include="..\Diplomski.Core\Diplomski.Models.csproj" />
   </ItemGroup>
 
 </Project>
