--- a/Diplomski.Core/Diplomski.Models.csproj
+++ b/Diplomski.Core/Diplomski.Models.csproj
@@ -1,23 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.8.2" />
     <PackageReference Include="Elasticsearch.Net" Version="7.16.0" />
     <PackageReference Include="kafka-sharp" Version="1.4.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="NEST" Version="7.16.0" />
     <PackageReference Include="NEST.JsonNetSerializer" Version="7.16.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Diplomski.Core\Diplomski.Models.csproj" />
   </ItemGroup>
 
 </Project>
